tweaks are working for Narrator - need to add SR text before and after next

--- a/2018-06-08_ImageTabCarousel_ATbugFixes/CP_ImageTabsCarousel_1_M.html
+++ b/2018-06-08_ImageTabCarousel_ATbugFixes/CP_ImageTabsCarousel_1_M.html
@@ -18,13 +18,13 @@
                         <img alt="{{left-arrow-image-alt-text}}" src="{{left-arrow-image}}">
                     </button>
                     <div class="carousel-thumbnail-list" role="tablist">
-                        <button id="tabcarousel-1" class="carousel-thumbnail-item" tabindex="0" role="tab" aria-selected="false" aria-controls="carousel-content-item-1"
-                            data-index="0" data-active="true" data-show="{{1:show-element}}" data-item-class="{{1:background-color}} {{1:background-theme}}"
+                        <button id="tabcarousel-1" class="carousel-thumbnail-item" tabindex="0" role="tab" aria-selected="true" aria-controls="carousel-content-item-1"
+                            data-tabspot="true" data-index="0" data-active="true" data-show="{{1:show-element}}" data-item-class="{{1:background-color}} {{1:background-theme}}"
                             data-bkgimg-src="{{1:background-image-2000x500}}" data-bkgimg-alt="{{1:background-alt-text}}" data-body-logo="{{1:logo-image-300x100}}"
                             data-body-logo-alt="{{1:logo-image-alt-text}}" data-body-h3="{{1:headline}}" data-body="{{1:body}}"
                             data-cta-href="{{1:link}}" data-cta-target="{{1:link-target}}" data-cta-atlas="{{1:link-atlas}}"
                             data-cta-ariaLabel="{{1:aria-label}}" data-cta-span="{{1:link-text}}">
-                            <img alt="{{1:thumbnail-alt-text}}" src="{{1:thumbnail-image-180x60}}">
+                            <img alt="{{1:thumbnail-alt-text}}" src="{{1:thumbnail-image-180x60}}" role="presentation">
                         </button>
                         <button id="tabcarousel-2" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-2"
                             data-index="1" data-active="false" data-show="{{2:show-element}}" data-item-class="{{2:background-color}} {{2:background-theme}}"
@@ -32,7 +32,7 @@
                             data-body-logo-alt="{{2:logo-image-alt-text}}" data-body-h3="{{2:headline}}" data-body="{{2:body}}"
                             data-cta-href="{{2:link}}" data-cta-target="{{2:link-target}}" data-cta-atlas="{{2:link-atlas}}"
                             data-cta-ariaLabel="{{2:aria-label}}" data-cta-span="{{2:link-text}}">
-                            <img alt="{{2:thumbnail-alt-text}}" src="{{2:thumbnail-image-180x60}}">
+                            <img alt="{{2:thumbnail-alt-text}}" src="{{2:thumbnail-image-180x60}}" role="presentation">
                         </button>
                         <button id="tabcarousel-3" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-3"
                             data-index="2" data-active="false" data-show="{{3:show-element}}" data-item-class="{{3:background-color}} {{3:background-theme}}"
@@ -40,7 +40,7 @@
                             data-body-logo-alt="{{3:logo-image-alt-text}}" data-body-h3="{{3:headline}}" data-body="{{3:body}}"
                             data-cta-href="{{3:link}}" data-cta-target="{{3:link-target}}" data-cta-atlas="{{3:link-atlas}}"
                             data-cta-ariaLabel="{{3:aria-label}}" data-cta-span="{{3:link-text}}">
-                            <img alt="{{3:thumbnail-alt-text}}" src="{{3:thumbnail-image-180x60}}">
+                            <img alt="{{3:thumbnail-alt-text}}" src="{{3:thumbnail-image-180x60}}" role="presentation">
                         </button>
                         <button id="tabcarousel-4" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-4"
                             data-index="3" data-active="false" data-show="{{4:show-element}}" data-item-class="{{4:background-color}} {{4:background-theme}}"
@@ -48,7 +48,7 @@
                             data-body-logo-alt="{{4:logo-image-alt-text}}" data-body-h3="{{4:headline}}" data-body="{{4:body}}"
                             data-cta-href="{{4:link}}" data-cta-target="{{4:link-target}}" data-cta-atlas="{{4:link-atlas}}"
                             data-cta-ariaLabel="{{4:aria-label}}" data-cta-span="{{4:link-text}}">
-                            <img alt="{{4:thumbnail-alt-text}}" src="{{4:thumbnail-image-180x60}}">
+                            <img alt="{{4:thumbnail-alt-text}}" src="{{4:thumbnail-image-180x60}}" role="presentation">
                         </button>
                         <button id="tabcarousel-5" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-5"
                             data-index="4" data-active="false" data-show="{{5:show-element}}" data-item-class="{{5:background-color}} {{5:background-theme}}"
@@ -56,7 +56,7 @@
                             data-body-logo-alt="{{5:logo-image-alt-text}}" data-body-h3="{{5:headline}}" data-body="{{5:body}}"
                             data-cta-href="{{5:link}}" data-cta-target="{{5:link-target}}" data-cta-atlas="{{5:link-atlas}}"
                             data-cta-ariaLabel="{{5:aria-label}}" data-cta-span="{{5:link-text}}">
-                            <img alt="{{5:thumbnail-alt-text}}" src="{{5:thumbnail-image-180x60}}">
+                            <img alt="{{5:thumbnail-alt-text}}" src="{{5:thumbnail-image-180x60}}" role="presentation">
                         </button>
                         <button id="tabcarousel-6" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="carousel-content-item-6"
                             data-index="5" data-active="false" data-show="{{6:show-element}}" data-item-class="{{6:background-color}} {{6:background-theme}}"
@@ -64,7 +64,7 @@
                             data-body-logo-alt="{{6:logo-image-alt-text}}" data-body-h3="{{6:headline}}" data-body="{{6:body}}"
                             data-cta-href="{{6:link}}" data-cta-target="{{6:link-target}}" data-cta-atlas="{{6:link-atlas}}"
                             data-cta-ariaLabel="{{6:aria-label}}" data-cta-span="{{6:link-text}}">
-                            <img alt="{{6:thumbnail-alt-text}}" src="{{6:thumbnail-image-180x60}}">
+                            <img alt="{{6:thumbnail-alt-text}}" src="{{6:thumbnail-image-180x60}}" role="presentation">
                         </button>
                     </div>
                     <!-- next arrow - hidden by default -->
@@ -93,21 +93,6 @@
                             </mscom:link>
                         </div>
                     </div>
-
-                    <!-- <div id="bottom" role="tabpanel" tabindex="0" class="carousel-content-item" data-active="false" data-show="false">
-                        <div class="carousel-content-background">
-                            <img id="conBkgImage" src="">
-                        </div>
-                        <div class="carousel-content">
-                            <img src="">
-                            <h3 class="carousel-headline c-heading-4"></h3>
-                            <div class="carousel-body"></div>
-                            <a href="" target="" class="carousel-link c-call-to-action c-glyph">
-                                <span></span>
-                            </a>
-                        </div>
-                    </div> -->
-
                 </div>
 
                 <a class="carousel-left carousel-nav" role="presentation" aria-hidden="true" tabindex="-1">
