added keyboard Tab support for mobile view

--- a/2018-06-08_ImageTabCarousel_ATbugFixes/CP_ImageTabsCarousel_1_M.html
+++ b/2018-06-08_ImageTabCarousel_ATbugFixes/CP_ImageTabsCarousel_1_M.html
@@ -97,13 +97,13 @@
                     </div>
                 </div>
 
-                <a class="carousel-left carousel-nav" role="presentation" aria-hidden="true" tabindex="-1">
+                <a class="carousel-left carousel-nav" aria-hidden="false" tabindex="0">
                     <picture>
                         <source class='hide-by-default show-element' srcset='{{left-arrow-image}}' media='(min-width:0)' />
                         <img srcset='{{left-arrow-image}}' class="" data-desktop-class="" alt="{{left-arrow-image-alt-text}}" src="{{left-arrow-image}}">
                     </picture>
                 </a>
-                <a class="carousel-right carousel-nav" role="presentation" aria-hidden="true" tabindex="-1">
+                <a class="carousel-right carousel-nav" aria-hidden="false" tabindex="0">
                     <picture>
                         <source class='hide-by-default show-element' srcset='{{right-arrow-image}}' media='(min-width:0)' />
                         <img srcset='{{right-arrow-image}}' class="" data-desktop-class="" alt="{{right-arrow-image-alt-text}}" src="{{right-arrow-image}}">
