--- a/snippets/accessibility.html
+++ b/snippets/accessibility.html
@@ -25,7 +25,7 @@
     <li>role="alert" - this is more aggressive version of aria-live</li>
 
     <li>role="presentation" - tells screen reader it should be skipped as it is only for astitics.</li>
-    <li></li>
+    <li><a href="https://www.w3.org/WAI/PF/aria/roles#widget_roles">detailed list of role options</a></li>
     <li></li>
     <li></li>
     <li></li>
