initial accessibility updates  looks like there will be more

--- a/2018-06-08_ImageTabCarousel_ATbugFixes/CP_ImageTabsCarousel_1_M.html
+++ b/2018-06-08_ImageTabCarousel_ATbugFixes/CP_ImageTabsCarousel_1_M.html
@@ -78,8 +78,8 @@
             <!-- Tab Content -->
             <div id="imageTabCarouselContent" class="livearea livearea-content">
                 <div class="carousel-content-list">
-                    <div id="bottom" aria-labelledby="tabcarousel-1" role="tabpanel" tabindex="0" class=" carousel-content-item {{1:background-color}} {{1:background-theme}} " data-active="true " data-show="{{1:show-element}} ">
-
+                    <div id="bottom" aria-labelledby="" role="tabpanel" tabindex="0" class=" carousel-content-item {{1:background-color}} {{1:background-theme}} " data-active="true " data-show="{{1:show-element}} ">
+                        <div id="mobileStatusUpdate" class="visuallyhidden"></div>
                         <a class="carousel-left carousel-nav" role="presentation" aria-label="previous slide" aria-hidden="false" tabindex="0">
                             <picture>
                                 <source class='hide-by-default show-element' srcset='{{left-arrow-image}}' media='(min-width:0)' />
@@ -94,7 +94,7 @@
                                     src="{{right-arrow-image}}">
                             </picture>
                         </a>
-                        <!--<div id="mobileStatusUpdate" class="visuallyhidden"></div>-->
+                        
                         <div id="conBkgImage" class="carousel-content-background" role="presentation">
                             <img class="" src="{{1:background-image-2000x500}}" alt="{{1:background-alt-text}}" aria-hidden="true">
                         </div>
