--- a/snippets/accessibility.html
+++ b/snippets/accessibility.html
@@ -14,7 +14,7 @@
         <ul>
             <li>Looking like it is best to seperate the info you need to be read (expand / collapse) into a seperate div. https://accessibility.huit.harvard.edu/provide-notification-dynamic-changes-content</li>
         </ul>
-    <li></li>
+    <li><a href="https://www.w3.org/TR/wai-aria-practices/#tabpanel"> details on Tab Operation</a></li>
     <li></li>
     <li></li>
     <li></li>
