miss labeled Aria-controls ID - corrected

--- a/2018-06-08_ImageTabCarousel_ATbugFixes/CP_ImageTabsCarousel_1_M.html
+++ b/2018-06-08_ImageTabCarousel_ATbugFixes/CP_ImageTabsCarousel_1_M.html
@@ -19,7 +19,7 @@
                     </button>
                     <div class="carousel-thumbnail-list" role="tablist" aria-label="Carousel of companies using Windows and Azure to realize their potential">
                         <!-- <div class="visuallyhidden" tabindex="-1">The beginning of Carousel</div> -->
-                        <button id="tabcarousel-1" class="carousel-thumbnail-item" tabindex="0" role="tab" aria-selected="true" aria-controls="button"
+                        <button id="tabcarousel-1" class="carousel-thumbnail-item" tabindex="0" role="tab" aria-selected="true" aria-controls="bottom"
                             aria-label="Rackspace" data-tabspot="true" data-index="0" data-active="true" data-show="{{1:show-element}}"
                             data-item-class="{{1:background-color}} {{1:background-theme}}" data-bkgimg-src="{{1:background-image-2000x500}}"
                             data-bkgimg-alt="{{1:background-alt-text}}" data-body-logo="{{1:logo-image-300x100}}" data-body-logo-alt="{{1:logo-image-alt-text}}"
@@ -27,7 +27,7 @@
                             data-cta-atlas="{{1:link-atlas}}" data-cta-ariaLabel="{{1:aria-label}}" data-cta-span="{{1:link-text}}">
                             <img alt="{{1:thumbnail-alt-text}}" src="{{1:thumbnail-image-180x60}}" role="presentation">
                         </button>
-<button id="tabcarousel-2" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="button"
+                        <button id="tabcarousel-2" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="bottom"
                             aria-label="Create" data-index="1" data-active="false" data-show="{{2:show-element}}" data-item-class="{{2:background-color}} {{2:background-theme}}"
                             data-bkgimg-src="{{2:background-image-2000x500}}" data-bkgimg-alt="{{2:background-alt-text}}" data-body-logo="{{2:logo-image-300x100}}"
                             data-body-logo-alt="{{2:logo-image-alt-text}}" data-body-h3="{{2:headline}}" data-body="{{2:body}}"
@@ -35,7 +35,7 @@
                             data-cta-ariaLabel="{{2:aria-label}}" data-cta-span="{{2:link-text}}">
                             <img alt="{{2:thumbnail-alt-text}}" src="{{2:thumbnail-image-180x60}}" role="presentation">
                         </button>
-                        <button id="tabcarousel-3" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="button"
+                        <button id="tabcarousel-3" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="bottom"
                             aria-label="Youth Villages" data-index="2" data-active="false" data-show="{{3:show-element}}" data-item-class="{{3:background-color}} {{3:background-theme}}"
                             data-bkgimg-src="{{3:background-image-2000x500}}" data-bkgimg-alt="{{3:background-alt-text}}" data-body-logo="{{3:logo-image-300x100}}"
                             data-body-logo-alt="{{3:logo-image-alt-text}}" data-body-h3="{{3:headline}}" data-body="{{3:body}}"
@@ -43,7 +43,7 @@
                             data-cta-ariaLabel="{{3:aria-label}}" data-cta-span="{{3:link-text}}">
                             <img alt="{{3:thumbnail-alt-text}}" src="{{3:thumbnail-image-180x60}}" role="presentation">
                         </button>
-                        <button id="tabcarousel-4" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="button"
+                        <button id="tabcarousel-4" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="bottom"
                             aria-label="Malaysia Airlines" data-index="3" data-active="false" data-show="{{4:show-element}}"
                             data-item-class="{{4:background-color}} {{4:background-theme}}" data-bkgimg-src="{{4:background-image-2000x500}}"
                             data-bkgimg-alt="{{4:background-alt-text}}" data-body-logo="{{4:logo-image-300x100}}" data-body-logo-alt="{{4:logo-image-alt-text}}"
@@ -52,7 +52,7 @@
                             aria-live="assertive">
                             <img alt="{{4:thumbnail-alt-text}}" src="{{4:thumbnail-image-180x60}}" role="presentation">
                         </button>
-                        <button id="tabcarousel-5" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="button"
+                        <button id="tabcarousel-5" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="bottom"
                             aria-label="Saudia" data-index="4" data-active="false" data-show="{{5:show-element}}" data-item-class="{{5:background-color}} {{5:background-theme}}"
                             data-bkgimg-src="{{5:background-image-2000x500}}" data-bkgimg-alt="{{5:background-alt-text}}" data-body-logo="{{5:logo-image-300x100}}"
                             data-body-logo-alt="{{5:logo-image-alt-text}}" data-body-h3="{{5:headline}}" data-body="{{5:body}}"
@@ -60,7 +60,7 @@
                             data-cta-ariaLabel="{{5:aria-label}}" data-cta-span="{{5:link-text}}">
                             <img alt="{{5:thumbnail-alt-text}}" src="{{5:thumbnail-image-180x60}}" role="presentation">
                         </button>
-                        <button id="tabcarousel-6" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="button"
+                        <button id="tabcarousel-6" class="carousel-thumbnail-item" tabindex="-1" role="tab" aria-selected="false" aria-controls="bottom"
                             aria-label="Tyco" data-index="5" data-active="false" data-show="{{6:show-element}}" data-item-class="{{6:background-color}} {{6:background-theme}}"
                             data-bkgimg-src="{{6:background-image-2000x500}}" data-bkgimg-alt="{{6:background-alt-text}}" data-body-logo="{{6:logo-image-300x100}}"
                             data-body-logo-alt="{{6:logo-image-alt-text}}" data-body-h3="{{6:headline}}" data-body="{{6:body}}"
