lazyload is working

--- a/snippets/html-snippets.html
+++ b/snippets/html-snippets.html
@@ -1,2 +1,6 @@
 <!-- Meta tag to allow page to be saved as an app - will open in browswer without top nav  -->
 <meta name="apple-mobile-web-app-capable" content="yes">
+
+
+<!-- small placeholder -->
+<img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" >
