--- a/SQL-ServerPLT/SQL-server-singleCarousel-DataURI.html
+++ b/SQL-ServerPLT/SQL-server-singleCarousel-DataURI.html
@@ -207,12 +207,10 @@
                                     <span>Learn how Fordham University unlocks key insights with SQL Server and Power BI</span>
                                 </a>
                             </div>
-                            <div class="cp-col2-right display-table-cell xs-db fn va-middle l-col-12-24 s-col-12-24 xs-col-1-1 xs-mt-3  media-column img-right"
-                                style="width: 50%;">
+                            <div class="cp-col2-right display-table-cell xs-db fn va-middle l-col-12-24 s-col-12-24 xs-col-1-1 xs-mt-3  media-column img-right" style="width: 50%;">
                                 <div class="video-link">
                                     <a class="mscom-link pos-r lightColor width-10 text-center fl mw video-poster-link " data-player-type="" data-video-url="" data-video-title="" data-no-tag="1" wcs.cn="" style="cursor: default;"></a>
-<mscom:contentinclude ajaxrendered="false" controltheme="default" instancename="RE1Jxxx-personInFrontofThreeMonitors-610x402"
- md:pageid="fffb90b0-0e6e-4c44-8f7b-48f9306e133c"></mscom:contentinclude>
+                                    <mscom:contentinclude ajaxrendered="false" controltheme="default" instancename="RE1Jxxx-personInFrontofThreeMonitors-610x402" md:pageid="fffb90b0-0e6e-4c44-8f7b-48f9306e133c"></mscom:contentinclude>
                                 </div>
                             </div>
                         </div>
@@ -1104,15 +1102,7 @@
                         <div class="c-mosaic">
                             <div class="theme-dark fl" data-f-mosaic="f-vp1-whole f-vp4-half f-height-large">
                                 <section class="c-mosaic-placement section-1 f-height-large f-width-large">
-                                    <picture>
-                                        <source class="hide-by-default show-element" srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1ZfUC"
-                                            media="(min-width:540px)">
-                                        <source class="hide-by-default show-element" srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1ZfUC"
-                                            media="(min-width:0)">
-                                        <img srcset="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1ZfUC" class="section-image" data-desktop-class="section-image"
-                                            alt="" src="//img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE1ZfUC"
-                                            role="presentation">
-                                    </picture>
+                                    <mscom:contentinclude ajaxrendered="false" controltheme="default" instancename="RE1ZfUC-BkgImg-MS-presentation-540x320" md:pageid="392b7017-e1a8-46a2-8ad3-ce502db89e63"></mscom:contentinclude>
                                     <div>
                                         <h3 class="c-heading-3 section-headline">Microsoft Build is almost here</h3>
                                         <p class="c-paragraph-3 section-content">See what’s next in tech on May 7–9. Join us in person or online to learn the latest
