--- a/snippets/html-snippets.html
+++ b/snippets/html-snippets.html
@@ -4,3 +4,6 @@
 
 <!-- small placeholder -->
 <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" >
+
+<!-- Attach css -->
+<link rel="stylesheet" href="styles.css">
