--- a/snippets/accessibility.html
+++ b/snippets/accessibility.html
@@ -15,7 +15,7 @@
             <li>Looking like it is best to seperate the info you need to be read (expand / collapse) into a seperate div. https://accessibility.huit.harvard.edu/provide-notification-dynamic-changes-content</li>
         </ul>
     <li><a href="https://www.w3.org/TR/wai-aria-practices/#tabpanel"> details on Tab Operation</a></li>
-    <li></li>
+    <li>aria-setsize="16" aria-posinset="5"  - List of 16 position # 5 -- <span><a href="https://accessibilityresources.org/aria-setsize">details</a></span></li>
     <li></li>
     <li></li>
     <li></li>
