just working bugs

--- a/snippets/accessibility.html
+++ b/snippets/accessibility.html
@@ -22,10 +22,11 @@
 </ul>
 <h2>Role</h2>
 <ul>
+    <li>role="region" - this just groups area so screen readers can announce when entering and exiting.</li>
     <li>role="alert" - this is more aggressive version of aria-live</li>
 
     <li>role="presentation" - tells screen reader it should be skipped as it is only for astitics.</li>
-    <li><a href="https://www.w3.org/WAI/PF/aria/roles#widget_roles">detailed list of role options</a></li>
+    <li>For more info -<a href="https://www.w3.org/WAI/PF/aria/roles#widget_roles">detailed list of role options</a>.</li>
     <li></li>
     <li></li>
     <li></li>
